<resources>
    <string name="app_name">Aquarium IoT</string>
    <string name="devices">Bluetooth Devices</string>
    <string name="bluetooth_permission_title">Bluetooth permission</string>
    <string name="bluetooth_permission_grant">Bluetooth permission is required by this App. Please grant in next dialog.</string>
    <string name="bluetooth_permission_denied">Bluetooth permission was permanently denied. You have to enable permission \"%s\" in App settings.</string>
    <string name="aqua_control_message">Aqua control system</string>
    <string name="unknown_status">Unknown status</string>
    <string name="on_status">On</string>
    <string name="off_status">Off</string>
    <string name="hello_world">hello world</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameSetting">settingButton</string>
    <string name="wifi">wifi</string>
    <string name="wifi_is_not_connected">Không có kết nối wifi</string>
    <string name="stringPlaceHolderWithDegreeSymbol">%s°</string>
    <string name="temperature_title">Nhiệt độ</string>
    <string name="pH_text_name">Độ pH</string>
    <string name="value_not_found">X</string>
    <string name="TDS_name">Tds</string>
    <string name="stateHeater">Bật</string>
    <string name="heater_name">Sưởi</string>
    <string name="chiller_name">Làm mát</string>
    <string name="stateChiller">Tắt</string>
    <string name="mode_name">Chế độ</string>
    <string name="auto_mode">Tự động</string>
    <string name="manual_mode">Thủ công</string>
    <string name="Temperature_name">Nhiệt độ</string>
    <string name="invalid_device_message">Thiết bị không hợp lệ</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="connection_popup_name">Aqua IoT Pro</string>
    <string name="setting_wifi">Cài đặt Wifi</string>
    <string name="submit">Xác nhận</string>
    <string name="ssid_hint">Tên Wifi</string>
    <string name="debug_btn_text">Debug</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="heater_button_text">Bật sưởi</string>
    <string name="chiller_button_text">Bật làm mát</string>
    <string name="data_text">Dữ liệu</string>
    <string name="lasted_update_date_string">Cập nhật vào</string>
    <string name="my_wifi">Lethuy_2.4Ghz</string>
    <string name="my_password">11336688</string>
    <string name="default_ssid_wifi"></string>
    <string name="default_ssid_password"></string>
    <string name="button_control_string">Cập nhật điều khiển</string>
    <string name="button_choosing_fish">Chọn các loại cá</string>
    <string name="button_confirm">Xác nhận</string>
    <string name="button_go_back">Quay lại</string>
    <string name="button_close">Đóng</string>
    <string name="button_change">Chỉnh sửa</string>
    <string name="fish_other_information_default">Không có thông tin</string>
    <string name="desired_temperature_suggest">Nhiệt độ cài đặt</string>
    <string name="tat">Tắt</string>
    <string name="bat">Bật</string>
    <string name="title_activity_choosing_fish">ChoosingFishActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_recommendation">Xem đề xuất môi trường bể</string>
    <string name="environment_rec_title">Phân tích môi trường bể</string>
</resources>
